@@ -24,7 +24,7 @@ public final class DriverFactory {
 
     }
 
-    public static WebDriver getDriver(String browser) throws MalformedURLException {
+    public static WebDriver getDriver(String browser,String TestName) throws MalformedURLException {
 
         WebDriver driver = null;
 
@@ -42,7 +42,8 @@ public final class DriverFactory {
                 driver.manage().window().fullscreen();
 */
                 options.setCapability("selenoid:options", new HashMap() {{
-                    put("name", "Test badge...");
+                    put("browserName","chrome");
+                    put("name", TestName);
                     put("sessionTimeout", "5m");
                     put("screenResolution","1920x1080x24");
                     put("enableVNC", true); // if true While exection test case we will see video
@@ -55,7 +56,8 @@ public final class DriverFactory {
 
                  //selenoid:4444 for Running Jenkins with Docker
                  driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
-                // driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+                //driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+                // driver = new RemoteWebDriver(new URL("http://3.90.149.206:4444"), options);
                  driver.manage().window().fullscreen();
 
             }
@@ -70,7 +72,7 @@ public final class DriverFactory {
             if (runmode.equalsIgnoreCase("remote")) {
                 ChromeOptions options = new ChromeOptions();
                 options.setCapability("selenoid:options", new HashMap() {{
-                    put("name", "Test badge...");
+                    put("name", TestName);
                     put("browserName","safari");
                     put("browserVersion","15.0");
                     put("sessionTimeout", "5m");
@@ -82,7 +84,8 @@ public final class DriverFactory {
                     {{put("manual", "true");}});
                 }});
                 driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
-                //driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+                //driver = new RemoteWebDriver(new URL("http://3.90.149.206:4444/wd/hub"), options);
+               // driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
             }
             else {
                 WebDriverManager.chromedriver().setup();
